--- a/department/pom.xml
+++ b/department/pom.xml
@@ -70,6 +70,17 @@
             <artifactId>dictionary</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.dw</groupId>
+            <artifactId>employee-department-server-api</artifactId>
+            <version>${project.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.dw</groupId>
+                    <artifactId>dictionary</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
